[project]
name = "lifescience-mcps"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.workspace]
members = [
  "servers/*",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.11.11",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # pysen basic ignore
  "E501", # Line too long (ignored by pysen)
  "D", # pydocstyle (https://pypi.org/project/pydocstyle/)
  "ICN", # flake8-import-conventions (https://github.com/joaopalmeiro/flake8-import-conventions) # NOQA

  # pysen strict ignore
  "S101", # Use of `assert` detected
  # "T20", # flake8-print (https://pypi.org/project/flake8-print/)
  "ANN", # flake8-annotations (https://pypi.org/project/flake8-annotations/)
  "INP001", # File {file} is part of an implicit namespace package. Add an `__init__.py`.

  # fmt conflict ignore
  # https://docs.astral.sh/ruff/formatter/#format-suppression
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",

  # custom ignore
  "RET504", # Unnecessary assignment to `text` before `return` statement
  "RUF001", # Docstring contains ambiguous `ノ` (KATAKANA LETTER NO). Did you mean `/` (SOLIDUS)?
  "RUF002", # Docstring contains ambiguous `ノ` (KATAKANA LETTER NO). Did you mean `/` (SOLIDUS)?
  "RUF015", # Prefer `next(...)` over single element slice
  "TD001", # Invalid TODO tag: `FIXME`
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "FIX001", # Line contains FIXME, consider resolving the issue
  "FIX002", # Line contains TODO, consider resolving the issue
  "PTH123", # open()` should be replaced by `Path.open()`

  # mypy support issues
  "UP040", # type statement
]

extend-select = [
  "I", # isort (https://pypi.org/project/isort/)
  "E", # pycodestyle (https://pypi.org/project/pycodestyle/)
  "F", # pyflakes (https://pypi.org/project/pyflakes/)
  "W", # pycodestyle (https://pypi.org/project/pycodestyle/)
  "B", # flake8-bugbear (https://pypi.org/project/flake8-bugbear/)
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "TID252", # Prefer absolute imports over relative imports from parent modules
  "FBT001", # Boolean-typed positional argument in function definition
]
