[project]
name = "pubmed-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "illumination-k", email = "skawamura27@preferred.jp" },
]
requires-python = ">=3.12"
dependencies = [
  "defusedxml>=0.7.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "types-defusedxml>=0.7.0.20250516",
]
