[project]
name = "cellosaurus-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for the Cellosaurus cell line database"
readme = "README.md"
authors = [
  { name = "illumination-k", email = "skawamura27@preferred.jp" },
]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "mcp>=1.9.1",
  "pydantic>=2.11.5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.5",
]

[project.scripts]
cellosaurus-mcp = "cellosaurus_mcp.server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ["py312"]
