[project]
name = "cellosaurus-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for the Cellosaurus cell line database"
readme = "README.md"
authors = [
  { name = "illumination-k", email = "skawamura27@preferred.jp" },
]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "mcp>=1.9.1",
  "pydantic>=2.11.5",
  "cellosaurus-api-methods-client"
]

[project.scripts]
cellosaurus-mcp = "cellosaurus_mcp.server:serve"

[tool.uv.sources]
cellosaurus-api-methods-client = { path = "../../openapi_clients/cellosaurus" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
