[project]
name = "pubmed-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "illumination-k", email = "skawamura27@preferred.jp" },
]
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.9.1",
  "defusedxml>=0.7.1",
  "httpx>=0.28.1",
  "pydantic>=2.11.5",
]

[project.scripts]
pubmed-mcp = "pubmed_mcp.server:serve"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "types-defusedxml>=0.7.0.20250516",
]
